# vane

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: InternalIssuesCreateMirror.yml  InternalIssuesUpdateMirror.yml  ci.yml  code_quality.yml  coverage.yml  on_pr.yml  on_push.yml  packaging.yml  packaging_sdist.yml  packaging_wheels.yml  release.yml  security.yml  targeted_test.yml
_duckdb-stubs/: __init__.pyi  _sqltypes.pyi
cmake/: compiler_launcher.cmake  duckdb_loader.cmake
duckdb/: __init__.py  __init__.pyi  bytes_io_wrapper.py  filesystem.py  polars_io.py  udf.py
duckdb/datasource/: video_reader.py
duckdb/experimental/spark/: _globals.py  exception.py
duckdb/functional/: __init__.py
duckdb/query_graph/: __main__.py
duckdb/sqltypes/: __init__.py
duckdb/typing/: __init__.py  __init__.pyi
duckdb/value/constant/: __init__.py  __init__.pyi
duckdb_packaging/: _versioning.py  build_backend.py  pypi_cleanup.py  setuptools_scm_version.py
scripts/: bootstrap_vcpkg.sh  cache_data.json  check_release_artifacts.py  connection_methods.json  generate_connection_code.py  generate_connection_methods.py  generate_connection_stubs.py  generate_connection_wrapper_methods.py  generate_connection_wrapper_stubs.py  generate_import_cache_cpp.py  generate_import_cache_json.py  get_cpp_methods.py  imports.py  run_fast_tests.sh  run_release_tests.sh
sqllogic/: conftest.py  skipped_tests.py  test_sqllogic.py
src/duckdb_py/: CMakeLists.txt  duckdb_python.cpp  pyconnection.cpp  pyfilesystem.cpp  pyrelation.cpp  pyresult.cpp  python_udf.cpp  python_udf_actor_resources.cpp  udf_executor.cpp
src/duckdb_py/arrow/: pyarrow_filter_pushdown.cpp
src/duckdb_py/common/: exceptions.cpp
src/duckdb_py/include/duckdb_python/: pyrelation.hpp  pyresult.hpp  pytype.hpp
src/duckdb_py/include/duckdb_python/expression/: pyexpression.hpp
src/duckdb_py/include/duckdb_python/import_cache/modules/: pyarrow_module.hpp
src/duckdb_py/include/duckdb_python/numpy/: numpy_type.hpp
src/duckdb_py/include/duckdb_python/pandas/: pandas_scan.hpp
src/duckdb_py/include/duckdb_python/pybind11/: gil_wrapper.hpp
src/duckdb_py/include/duckdb_python/pyconnection/: pyconnection.hpp
src/duckdb_py/native/: python_conversion.cpp  python_objects.cpp
src/duckdb_py/numpy/: array_wrapper.cpp  numpy_scan.cpp  raw_array_wrapper.cpp  type.cpp
src/duckdb_py/pandas/: scan.cpp
src/duckdb_py/pyexpression/: initialize.cpp
src/duckdb_py/pyrelation/: initialize.cpp
src/duckdb_py/ray/: distributed_plan_bindings.cpp  logical_plan_bindings.cpp  ray_module.cpp  safe_pyobject.hpp  task.cpp
src/duckdb_py/typing/: pytype.cpp  typing.cpp
src/duckdb_py/vane-runners/: vane_runners.cpp
tests/: conftest.py  pytest.ini  ray_test_profile.py
tests/coverage/: test_pandas_categorical_coverage.py
tests/extensions/: test_extensions_loading.py  test_httpfs.py
tests/extensions/json/: test_read_json.py
tests/fast/: test_alex_multithread.py  test_all_types.py  test_ambiguous_prepare.py  test_case_alias.py  test_context_manager.py  test_duckdb_api.py  test_expression.py  test_expression_implicit_conversion.py  test_filesystem.py  test_get_table_names.py  test_import_export.py  test_insert.py  test_json_logging.py  test_many_con_same_file.py  test_map.py  test_metatransaction.py  test_multi_statement.py  test_multithread.py  test_non_default_conn.py  test_package_metadata.py  test_parameter_list.py  test_parquet.py  test_profiler.py  test_pypi_cleanup.py  test_pytorch.py  test_ray_e2e.py  test_ray_fte_fault_injection.py  test_ray_real_integration.py  test_ray_test_profile.py  test_ray_udf_plan_replay.py  test_relation.py  test_relation_dependency_leak.py  test_replacement_scan.py  test_result.py  test_runtime_error.py  test_sql_expression.py  test_string_annotation.py  test_tf.py  test_transaction.py  test_type.py  (+12 more)
tests/fast/adbc/: test_adbc.py  test_connection_get_info.py  test_statement_bind.py
tests/fast/api/: test_3324.py  test_3654.py  test_3728.py  test_6315.py  test_attribute_getter.py  test_config.py  test_connection_close.py  test_connection_interrupt.py  test_cursor.py  test_dbapi00.py  test_dbapi01.py  test_dbapi04.py  test_dbapi05.py  test_dbapi07.py  test_dbapi08.py  test_dbapi09.py  test_dbapi10.py  test_dbapi11.py  test_dbapi12.py  test_dbapi13.py  test_dbapi_fetch.py  test_duckdb_connection.py  test_duckdb_execute.py  test_duckdb_query.py  test_explain.py  test_fsspec.py  test_insert_into.py  test_join.py  test_native_tz.py  test_query_interrupt.py  test_query_progress.py  test_read_csv.py  test_relation_to_view.py  test_sql_params_performance.py  test_streaming_result.py  test_to_csv.py  test_to_parquet.py  test_with_propagating_exceptions.py
tests/fast/arrow/: parquet_write_roundtrip.py  test_10795.py  test_12384.py  test_14344.py  test_2426.py  test_5547.py  test_6584.py  test_6796.py  test_7652.py  test_7699.py  test_8522.py  test_9443.py  test_arrow_batch_index.py  test_arrow_binary_view.py  test_arrow_case_sensitive.py  test_arrow_decimal256.py  test_arrow_decimal_32_64.py  test_arrow_deprecation.py  test_arrow_extensions.py  test_arrow_fetch.py  test_arrow_fetch_recordbatch.py  test_arrow_fixed_binary.py  test_arrow_ipc.py  test_arrow_list.py  test_arrow_offsets.py  test_arrow_pycapsule.py  test_arrow_recordbatchreader.py  test_arrow_replacement_scan.py  test_arrow_run_end_encoding.py  test_arrow_scanner.py  test_arrow_string_view.py  test_arrow_types.py  test_arrow_union.py  test_arrow_version_format.py  test_binary_type.py  test_buffer_size_option.py  test_dataset.py  test_date.py  test_dictionary_arrow.py  test_filter_pushdown.py  (+16 more)
tests/fast/numpy/: test_numpy_new_path.py
tests/fast/pandas/: test_2304.py  test_append_df.py  test_bug2281.py  test_bug5922.py  test_column_order.py  test_copy_on_write.py  test_create_table_from_pandas.py  test_date_as_datetime.py  (+32 more)
tests/slow/: test_h2oai_arrow.py  test_materialized_relation.py
tests/spark_namespace/: __init__.py
tests/stubs/: test_stubs.py
(+90 files in other folders)
